Added Core functionality Added ViewBindingAdapters to load Image from URI Added an initial Pair of Shirt and Pant Added Image Picker for Shirts and Pants Scroll to last item when new cloth is Added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,13 @@ dependencies {
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+
+    // Image Picker
+    implementation 'com.github.Drjacky:ImagePicker:1.7.10'
+
     // GSON
     implementation 'com.google.code.gson:gson:2.8.6'
 
